--- a/docs/css/login.css
+++ b/docs/css/login.css
@@ -364,14 +364,23 @@ ul {
 /* Imagen lateral */
 .image-section {
   flex: 1;
-  background: url('img/login-imagenes/fondodeagricultor.avif') center/cover;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
   min-height: 100%;
   width: 100%;
+  background-color: #f5f5f5;
+}
+
+/* Imagen de fondo como elemento img */
+.background-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .image-section::before {
